# AnyPkg

./: .bumpversion.cfg   .gitignore  .pre-commit-config.yaml  CHANGELOG.md  CITATION.cff  CMakeLists.txt  Makefile  package.json  requirement.txt  requirements.txt  setup.cfg  setup.py
any_pkg/: CMakeLists.txt  __main__.py  main.py
any_pkg/cmake/: CMakeLists.txt  cmake.py  package.py
any_pkg/conditionals/: CMakeLists.txt  conditionals.py
any_pkg/interpreters/: CMakeLists.txt  interpreter.py  python.py  ruby.py
any_pkg/macros/: CMakeLists.txt  macros.py
any_pkg/pkg_managers/: CMakeLists.txt  asdf.py  factory.py  gem.py  npm.py  package_manager.py  pip.py
any_pkg/pkg_managers/language/: CMakeLists.txt  __init__.py  cargo.py  gem.py  npm.py  pip.py
any_pkg/pkg_managers/system/: CMakeLists.txt  apk.py  apt-get.py  apt.py  apt_get.py  brew.py  choco.py  factory.py
any_pkg/utils/: shell.py
docs/: CMakeLists.txt  conf.py
util/: license_header.txt
