[metadata]
name = AnyPkg
version = 1.0.0
description = A system package manager abstraction to allow you to set up your development environment on any OS.
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/benvining/AnyPkg
author = Ben Vining
author_email = ben.the.vining@gmail.com
license = GPL3
license_file = LICENSE
classifiers =
    License :: OSI Approved :: GPL3 License
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
    Programming Language :: Python :: Implementation :: CPython
    Programming Language :: Python :: Implementation :: PyPy

[options]
python_requires = >=3.9

[options.entry_points]
console_scripts =
    anypkg = any_pkg.main:main
    AnyPkg = any_pkg.main:main

[bdist_wheel]
universal = True
